fix align

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ body {
     text-wrap: balance;
   }
 } */
-.headblock2__inner{
+.headblock2__inners{
   text-align: left;
 }
 .marb{
